# mandelbrot

./: Cargo.toml  README.md  config.json
src/: complex.rs  main.rs
