[package]
name = "mandelbrot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
colors-transform = "0.2.11"
crossterm = "0.27.0"
image = "0.25.1"
serde_json = "1.0.117"
